<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CameraPreviewSample</string>
    <string name="camera_preview_sample">Camera Preview Sample</string>
    <string name="camera_preview_test">Camera Preview Test</string>
    <string name="capture_with_intent">Capture by Intent</string>
    <string name="start_zxing">Start Zxing</string>

    <string name="info_preview_sample">An near fullscreen camera preview example</string>
    <string name="info_resize_sample">A preview that can be resized at runtime</string>
    <string name="info_capture_intent">An example on how to use the default Android camera intent</string>
    <string name="info_zxing">A simplified QR Code recognition example using the zxing library</string>
</resources>
